Fixed vertical align with scroll. Version increased to 0.0.11

--- a/src/common.less
+++ b/src/common.less
@@ -33,16 +33,9 @@
   -webkit-box-sizing: @val;
 }
 
-.transform(@val) {
-  -moz-transform: @val;
-  -ms-transform: @val;
-  -webkit-transform: @val;
-  -o-transform: @val;
-  transform: @val;
-}
-
 .cg-dialog-wrap {
   position: fixed;
+  overflow: auto;
   width: 100%;
   height: 100%;
   left: 0;
@@ -58,18 +51,35 @@
   }
 }
 
+.cg-wrap-cell {
+  width: 100%;
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.cg-dialog-before {
+  height: 100%;
+}
+
+.cg-dialog-before,
+.cg-dialog {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.cg-dialog-is-open {
+  overflow: hidden;
+}
+
 .cg-dialog {
   padding: 20px 30px;
   text-align: left;
   max-width: 460px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  .box-sizing(border-box);
+  position: relative;
   background-color: white;
   z-index: 1001;
-  vertical-align: middle;
-  .transform(translate(-50%, -50%));
+  .box-sizing(border-box);
   .user-select(text);
 
   &:focus {
